--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                     Morris Alper
                   </p>
                   <p>
-                    I am a machine learning researcher and computational linguist.
-                    I research how machine learning models understand language, how they can be leveraged for challenging linguistic tasks, and how they integrate language with modalities such as vision for high-level semantic understanding.
+                    I am a postdoctoral researcher at <a href="https://www.lti.cs.cmu.edu">Carnegie Mellon University's Language Technologies Institute (LTI)</a>.
+                    I research creative multimodal machine learning inspired by linguistics &mdash;
+                    how structures encoded by language provide a tool for interpreting and controlling modalities such as vision and audio, ML as a creativity aid, and innovative methods for low-resource languages.
                   </p>
                   <p>
-                    I am a PhD graduand in multimodal machine learning from Tel Aviv University, where I also received my MSc with honors. My BSc was from MIT, with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
+                    I completed my PhD in multimodal machine learning at Tel Aviv University, where I also received my MSc with honors. My BSc was from MIT, with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:morrisalp@gmail.com">Email</a> &nbsp;/&nbsp;
